--- a/smart-contracts/tsconfig.json
+++ b/smart-contracts/tsconfig.json
@@ -13,7 +13,7 @@
         "strictPropertyInitialization": false,
     },
     "include": [
-        "./*.ts"
+         "src/**/*.ts"
     ],
     "exclude": [
         "node_modules"
